--- a/public/offline.html
+++ b/public/offline.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mahabharath Wiki App</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/offline.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #000;
-            background-color: #D0D0D0;
-            height: 100vh;
-        }
-    </style>
-</head>
-
-<body>
-    <h1>You are offline</h1>
-</body>
-
+  <body>
+    <h2>You are not connected.</h2>
+    <div class="info">
+        <img src="https://media.webdunia.com/_media/hi/img/article/2016-12/15/full/1481777202-7644.jpg">
+        <h2>Wanted to see </h2>
+    </div>
+  </body>
 </html>
